# CMakeExample

./: CMakeLists.txt  Readme.txt  Readme2.txt  folder2
HelloQt/: CMakeLists.txt
